<resources>
    <string name="app_name">Sena</string>

    <string name="estas_preparado_t">¿Estás preparado?</string>
    <string name="estas_preparado_p">¡Fipp te da la bienvenida!</string>
    <string name="estas_preparado_p2">Ella te apoyará en el camino al éxito de tu control de finanzas.</string>
    <string name="sera_sencillo_facil_t">Será fácil y sencillo</string>
    <string name="sera_sencillo_facil_p">Sena mejora la forma en la que capturas tus ingresos y egresos, haciéndolo más dinámico para ti.</string>
    <string name="una_nueva_aventura_t">Una nueva aventura</string>
    <string name="una_nueva_aventura_p">Fipp te seguirá a través de este nuevo mundo de tus finanzas personales.</string>
    <string name="Tu_mayor_motivacion_para_ahorrar_t">Tu mayor motivación para ahorrar</string>
    <string name="Tu_mayor_motivacion_para_ahorrar_q">¿Cuál es?</string>
    <string name="Tu_mayor_motivacion_para_ahorrar_p">Selecciona la opción que más se adecúa a tu situación actual.</string>
    <string name="btn_text_viajar">Viajar</string>
    <string name="btn_text_emprender">Emprender</string>
    <string name="RecuperarPass">Recuperar contraseña</string>
    <string name="telefono">XXX-XXX-XX-XX</string>
    <string name="btn_text_otro">Otro</string>
    <string name="correo">Correo Electronico</string>
    <string name="numero">Numero Telefonico</string>
    <string name="btn_text_Ropa">Ropa</string>
    <string name="btn_text_empecemos">¡Empecemos!</string>
    <string name="btn_text_ahorremos">¡Ahorremos!</string>
    <string name="motivacion2">Tu mayor motivacion para ahorrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="porcent">%</string>
    <string name="texto_alcancia">Alcancia - LVL - 0</string>

</resources>