<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BienvenidaA"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/bienvenida_a" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/estas_preparado_t"
        android:textSize="25sp"
        android:fontFamily="@font/objectsans_heavy"
        android:textColor="@color/bienvenidas_title"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/objectsans_regular"
        android:text="@string/estas_preparado_p"
        android:textColor="@color/grey_cuales"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_gravity="center"
        android:fontFamily="@font/objectsans_regular"
        android:textAlignment="center"
        android:text="@string/estas_preparado_p2"
        android:textColor="@color/grey_cuales"
        android:textSize="15sp"
        />

    <ImageView
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/cara_star"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton_next"
        android:layout_marginBottom="15dp"
        />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

