<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/grey_motivation"
    tools:context=".Motivacion2">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/btn_back_m1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/boton_back"
                android:background="@color/white"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="55dp"
        android:fontFamily="@font/objectsans_heavy"
        android:gravity="center"
        android:text="@string/motivacion2"
        android:textColor="@color/bienvenidas_title"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/objectsans_regular"
        android:text="@string/Tu_mayor_motivacion_para_ahorrar_q"
        android:textColor="@color/grey_cuales"
        android:textSize="15sp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_user"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        />

    <EditText
        android:id="@+id/et_motivacion_personalizada"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="55dp"
        android:ems="20"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:hint="Escribe aquí tu motivación."
        android:textColorHint="@color/gray_hint"
        android:fontFamily="@font/objectsans_regular"
        android:background="@drawable/round_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ahorremos3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/boton_3"
            android:fontFamily="@font/objectsans_heavy"
            android:text="@string/btn_text_ahorremos"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="21sp"
             />

    </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>