<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Motivacion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/btn_back_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/boton_back"
                android:background="@color/white"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/objectsans_heavy"
        android:text="@string/Tu_mayor_motivacion_para_ahorrar_t"
        android:textAlignment="center"
        android:textColor="@color/bienvenidas_title"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/objectsans_regular"
        android:text="@string/Tu_mayor_motivacion_para_ahorrar_q"
        android:textColor="@color/grey_cuales"
        android:textSize="15sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_viajar"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/boton_viajar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:button="@android:color/transparent"
                    android:layout_weight="2"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_emprender"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/boton_emprender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:button="@android:color/transparent"
                    android:layout_weight="2"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_otro"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/boton_otro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:button="@android:color/transparent"
                    android:layout_weight="2"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_ropa"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/boton_ropa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:button="@android:color/transparent"
                    android:layout_weight="2"
                    />

            </TableRow>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/objectsans_regular"
            android:text="@string/Tu_mayor_motivacion_para_ahorrar_p"
            android:textColor="@color/grey_cuales"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ahorremos2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="80dp"
            android:background="@drawable/boton_4"
            android:fontFamily="@font/objectsans_heavy"
            android:text="@string/btn_text_ahorremos"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textAllCaps="false"
             />

    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>